Revert "Fixes double scrollbar on chrome 25."
This reverts commit 99ebe3dd993b64ca2a7581e3da1cfd2552510c33.

--- a/antiscroll.css
+++ b/antiscroll.css
@@ -4,11 +4,6 @@
   overflow: hidden;
 }
 
-.antiscroll-wrap ::-webkit-scrollbar {
-  width:  0px;
-  height: 0px;
-}
-
 .antiscroll-scrollbar {
   background: gray;
   background: rgba(0, 0, 0, 0.5);
